add the tracefile

--- a/plots/src/main/resources/plots.properties
+++ b/plots/src/main/resources/plots.properties
@@ -1,2 +1,4 @@
-tracefile=/home/amaxilatis/trace.out
-window.size=500
+# path to trace file
+tracefile=../../traces/trace.1
+# time for sliding window plot
+window.size=120
