--- a/viz/build.xml
+++ b/viz/build.xml
@@ -9,7 +9,7 @@
 <!--    <property name="logfile" value="/home/amaxilatis/Documents/Dropbox/tr.assembly/scripts/trace2.out"/> -->
     <property name="logfile" value="../traces/trace.1"/>
     <property name="delay" value="50"/>
-    <property name="propfile" value="./properties/template.properties"/>
+    <property name="propfile" value="../traces/template.properties"/>
 
     <path id="libraries">
         <fileset dir="${librarydir}">
@@ -57,7 +57,7 @@
         <jar destfile="${outdir}/wiseViz.jar" basedir="${targetdir}">
             <manifest>
                 <attribute name="Built-By" value="FRONTS"/>
-                <attribute name="Main-Class" value="wizeViz.viz.VizFRONTS"/>
+                <attribute name="Main-Class" value="wiseViz.viz.VizFRONTS"/>
             </manifest>
         </jar>
     </target>
@@ -94,10 +94,10 @@
                 author="true"
                 version="true"
                 use="true"
-                windowtitle="FRONTS Viz">
+                windowtitle="WiseViz">
             <packageset dir="${sourcedir}" defaultexcludes="yes">
-                <include name="eu.fronts.unified.viz/**"/>
-                <exclude name="eu.fronts.unified.viz/**/test/**"/>
+                <include name="wiseViz.viz/**"/>
+                <exclude name="wiseViz.viz/**/test/**"/>
             </packageset>
 
         </javadoc>
