--- a/viz/build.xml
+++ b/viz/build.xml
@@ -7,8 +7,9 @@
     <property name="targetdir" value="${outdir}/bin"/>
 
 <!--    <property name="logfile" value="/home/amaxilatis/Documents/Dropbox/tr.assembly/scripts/trace2.out"/> -->
-    <property name="logfile" value="../traces/trace.1"/>
-    <property name="delay" value="50"/>
+<!--    <property name="logfile" value="../traces/trace.1"/>-->
+    <property name="logfile" value="net10.txt"/>
+    <property name="delay" value="1"/>
     <property name="propfile" value="./properties/template.properties"/>
 
     <path id="libraries">
