--- a/viz/properties/template.properties
+++ b/viz/properties/template.properties
@@ -8,12 +8,12 @@ node-position-0x1bc4=1641.4838,289.38095
 node-position-0x6699=1592.1628,338.33334
 node-position-0x6666=904.96954,696.4762
 node-position-0xffff=524.0,574.0
-map-enable=false
+map-enable=true
 node-position-0x1b71=1595.9016,431.61905
 node-position-0x1c98=826.03674,647.4286
 node-position-0x14e7=1232.596,186.38095
 testbed-urn=urn\:wisebed\:ctitestbed
-map-image=img-ctitestbed.png
+map-image=/home/amaxilatis/Documents/Dropbox/pspace3D/pspaceday/
 node-position-0x1b85=1541.5808,583.6667
 node-position-0x1b8b=1478.8123,642.5238
 node-size=46
