updating configuration for spitfire demo

--- a/traces/spitfire/spitfire.properties
+++ b/traces/spitfire/spitfire.properties
@@ -13,7 +13,8 @@ node-position-0x1b71=1595.9016,431.61905
 node-position-0x1c98=826.03674,647.4286
 node-position-0x14e7=1232.596,186.38095
 testbed-urn=urn\:wisebed\:ctitestbed
-map-image=big/
+map-image=../traces/spitfire/big/bigHouseT02-0000000.png
+map-collection=../traces/spitfire/big/
 node-position-0x1b85=1541.5808,583.6667
 node-position-0x158d0000147057=281.0,164.0
 node-position-0x1b8b=1478.8123,642.5238
