--- a/traces/spitfire/spitfire.properties
+++ b/traces/spitfire/spitfire.properties
@@ -1,36 +1,37 @@
-#Tue Apr 24 17:19:00 CEST 2012
-node-position-0x1cde=1237.0,300.0
-node-position-0x158d00000b6ed1=234.0,384.0
-screen-size=1024,710
-node-position-0x1b77=649.43243,563.9524
+#Wed Apr 25 18:56:19 CEST 2012
+map-enable=true
 node-position-0x1cd0=831.03674,563.9524
-node-position-0x1bc4=1641.4838,289.38095
+node-position-0x14e7=1232.596,186.38095
+node-position-0x158d0000147057=281.0,164.0
+screen-size=1024,768
+node-position-0x158d0000147054=435.0,335.0
+map-collection=../traces/spitfire/big/
+node-position-0x158d0000147083=305.0,525.0
+node-position-0x158d00000b6ed1=234.0,384.0
+node-position-0xffff=524.0,574.0
 node-position-0x6699=1592.1628,338.33334
 node-position-0x6666=904.96954,696.4762
-node-position-0xffff=524.0,574.0
-map-enable=true
-node-position-0x1b71=1595.9016,431.61905
-node-position-0x1c98=826.03674,647.4286
-node-position-0x14e7=1232.596,186.38095
 testbed-urn=urn\:wisebed\:ctitestbed
-map-image=../traces/spitfire/big/bigHouseT02-000000.png
-map-collection=../traces/spitfire/big/
-node-position-0x1b85=1541.5808,583.6667
-node-position-0x158d0000147057=281.0,164.0
-node-position-0x1b8b=1478.8123,642.5238
-node-size=46
-node-position-0xddba=1257.208,103.0
-node-position-0x158d0000147054=435.0,335.0
-node-position-0x158d0000147083=305.0,525.0
-node-position-0x7b99=1621.0957,210.90475
-node-position-0x158d0000147119=665.0,165.0
-node-position-0x1ccd=1390.0735,196.0
-node-position-0x997b=1664.8344,152.04762
-node-position-0x57b=717.395,529.7143
-node-position-0xcbd=1165.0,480.0
-node-position-0x158d000014421d=163.09924,343.27344
 node-position-0xa41c=858.8053,716.0952
-node-position-0xcb1=1193.2751,259.9524
-node-position-0xc9b=879.96954,529.7143
+node-position-0x158d0000147119=665.0,165.0
+node-position-0x997b=1664.8344,152.04762
+node-position-0x1bc4=1641.4838,289.38095
+node-position-0xcbd=1165.0,480.0
+node-position-0x1b85=1541.5808,583.6667
+node-position-0x1cde=1237.0,300.0
+node-position-0x158d000014421d=163.09924,343.27344
+node-position-0x7b99=1621.0957,210.90475
+map-image=../traces/spitfire/big/bigHouseT02-000000.png
+node-position-0x1b77=649.43243,563.9524
+node-position-0x494=541.0,384.0
 node-position-0x153d=1551.2897,510.09525
+node-size=46
+node-position-0x1ccd=551.0,264.0
+node-position-0x57b=717.395,529.7143
+node-position-0x1b71=1595.9016,431.61905
+node-position-0xc9b=879.96954,529.7143
 node-position-0x2305=1454.0,69.0
+node-position-0xcb1=1193.2751,259.9524
+node-position-0x1b8b=1478.8123,642.5238
+node-position-0x1c98=826.03674,647.4286
+node-position-0xddba=1257.208,103.0
