--- a/traces/spitfire/spitfire_small.properties
+++ b/traces/spitfire/spitfire_small.properties
@@ -13,7 +13,7 @@ node-position-0x1b71=1595.9016,431.61905
 node-position-0x1c98=826.03674,647.4286
 node-position-0x14e7=1232.596,186.38095
 testbed-urn=urn\:wisebed\:ctitestbed
-map-image=maps/spitfire/small/
+map-image=../traces/spitfire/small/small00.png
 node-position-0x1b85=1541.5808,583.6667
 node-position-0x1b8b=1478.8123,642.5238
 node-size=46
