changes for the demo viz

--- a/traces/spitfire/spitfire.properties
+++ b/traces/spitfire/spitfire.properties
@@ -1,4 +1,4 @@
-#Wed Apr 25 18:56:19 CEST 2012
+#Thu Apr 26 17:40:29 CEST 2012
 map-enable=true
 node-position-0x1cd0=831.03674,563.9524
 node-position-0x14e7=1232.596,186.38095
@@ -15,6 +15,7 @@ testbed-urn=urn\:wisebed\:ctitestbed
 node-position-0xa41c=858.8053,716.0952
 node-position-0x158d0000147119=665.0,165.0
 node-position-0x997b=1664.8344,152.04762
+node-position-0x7061=481.0,384.0
 node-position-0x1bc4=1641.4838,289.38095
 node-position-0xcbd=1165.0,480.0
 node-position-0x1b85=1541.5808,583.6667
